--- a/yp-sneakers/index.html
+++ b/yp-sneakers/index.html
@@ -48,7 +48,7 @@
                         <img alt="Nike Dunk Low SP" src="./images/7.png" class="sneaker-image" />
                         <div class="sneaker-info">
                             <h3>Nike Dunk Low SP</h3>
-                            <p>Syracuse (2020/2022)</p>
+                            <p>Nike Dunk Low Orange Blaze Syracuse</p>
                         </div>
                     </a>
                 </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="sneaker">
-                    <img alt="adidas Yeezy Foam RNNR" src="./images/9.png" class="sneaker-image" />
+                    <img alt="adidas Yeezy Foam RNNR" src="images/adidasYeezyFoamRNNR.png" class="sneaker-image" />
                     <div class="sneaker-info">
                         <h3>adidas Yeezy Foam RNNR</h3>
                         <p>Stone Sage</p>
